--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+/* Imports */
+@import url("https://fonts.googleapis.com/css2?family=Asap:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap");
+
 * {
   margin: 0;
   padding: 0;
@@ -108,6 +112,13 @@ footer {
 .list-group-item {
   background-color: #222;
   color: white;
+}
+
+@media (max-width: 540px) {
+  footer {
+    padding: .5em;
+    line-height: normal;
+  }
 }
 
 @media (min-width: 960px) {
